k8s/oms-engine/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traderx
  labels:
    name: traderx
    environment: production
    security-level: high
